tests/ui/generic-associated-types/issue-92096.migrate.stderr
error[E0311]: the parameter type `C` may not live long enough
  --> $DIR/issue-92096.rs:19:33
   |
LL | fn call_connect<C>(c: &'_ C) -> impl '_ + Future + Send
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `C` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL |     C: Client + Send + Sync + 'a,
   |                             ++++

error[E0311]: the parameter type `C` may not live long enough
  --> $DIR/issue-92096.rs:19:33
   |
LL | fn call_connect<C>(c: &'_ C) -> impl '_ + Future + Send
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `C` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL |     C: Client + Send + Sync + 'a,
   |                             ++++

error: aborting due to 2 previous errors

